--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="hello">Hello World, Reservator!</string>
     <string name="app_name">Reservator</string>
+    <string name="get_a_room">Get a room!</string>
 </resources>
