-improved calendar view -reserve activity
git-svn-id: file:///srv/svn/repos/futurice_reservator@43 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="hello">Hello World, Reservator!</string>
     <string name="app_name">Reservator</string>
     <string name="get_a_room">Get a room!</string>
+    <string name="start">start</string>
+    <string name="end">end</string>
+    <string name="reserve">reserve</string>
 </resources>
