-login view -updated graphics
git-svn-id: file:///srv/svn/repos/futurice_reservator@47 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="start">start</string>
     <string name="end">end</string>
     <string name="reserve">reserve</string>
+    <string name="PREFERENCES_NAME">ReservatorPreferences</string>
+    <string name="login">Login</string>
 </resources>
