-asynchronous reservation data loading -refactored HomeActivity (moved most of the room reservation row logic to own class)
git-svn-id: file:///srv/svn/repos/futurice_reservator@69 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="book_now">Book now!</string>
     <string name="dateLabelFormat">E d.M.</string>
     <string name="weekLabelTemplate">Week ^1</string>
+    <string name="from">From </string>
+    <string name="to">To </string>
 </resources>
