-Added "See all rooms" button to roominfoactivity -Clicking the dark area of reservation popup calls dialog.cancel()
git-svn-id: file:///srv/svn/repos/futurice_reservator@130 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="weekLabelTemplate">Week ^1</string>
     <string name="from">From </string>
     <string name="to">To </string>
+    <string name="seeAllRooms">See all rooms</string>
     <string name="exchange_server_address">Exchange server address</string>
     <string name="PREFERENCES_SERVER_ADDRESS">serverAddress</string>
 </resources>
