--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="username">Username:</string>
     <string name="password">Password:</string>
     <string name="reservationTextTemplate">Reserved: ^1</string>
-    <string name="book_now">Book now!</string>
+    <string name="book_now">Book now</string>
     <string name="dateLabelFormat">E d.M.</string>
     <string name="weekLabelTemplate">Week ^1</string>
     <string name="from">From </string>
