Added fadein/fadeout animations to reservation row, also switched to viewswitcher
git-svn-id: file:///srv/svn/repos/futurice_reservator@175 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="password">Password:</string>
     <string name="reservationTextTemplate">Reserved: ^1</string>
     <string name="book_now">Book now</string>
-    <string name="dateLabelFormat">E d.M.</string>
+    <string name="dateLabelFormat">EEEE d.M.</string>
     <string name="weekLabelFormat">\'Week\' w</string>
     <string name="from">From </string>
     <string name="to">To </string>
