fixed timespan issue in CalendarVisualizer Tweaked animatinons in reservationrowview
git-svn-id: file:///srv/svn/repos/futurice_reservator@178 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -15,6 +15,10 @@
     <string name="weekLabelFormat">\'Week\' w</string>
     <string name="from">From </string>
     <string name="to">To </string>
+    <string name="goBackBtn">Go back!</string>
+    <string name="continueBtn">Continue</string>
+    <string name="doNotModify">Do not modify these settings, go away!</string>
+    <string name="onlyItTeamShouldModify">Only IT team should modify these settings.</string>
     <string name="seeAllRooms">See all rooms</string>
     <string name="exchange_server_address">Exchange server address</string>
     <string name="PREFERENCES_NAME">ReservatorPreferences</string>
