--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="PREFERENCES_USERNAME">username</string>
     <string name="PREFERENCES_PASSWORD">password</string>
     <string name="removeUserData">Remove login info</string>
+    <string name="lobbyRoomName">Lobby</string>
 </resources>
