--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="continueBtn">Continue</string>
     <string name="doNotModify">Do not modify these settings, go away!</string>
     <string name="onlyItTeamShouldModify">Only IT team should modify these settings.</string>
-    <string name="seeAllRooms">See all rooms</string>
+    <string name="seeAllRooms">All rooms</string>
     <string name="exchange_server_address">Exchange server address</string>
     <string name="room_name">Name of the default room</string>
     <string name="PREFERENCES_NAME">ReservatorPreferences</string>
