settings view has clickable rows, state is loaded, however, not saved updated the manifest's SDK version. The old implementation runs HTTP requests in UI thread(!) => to be fixed.

--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="PREFERENCES_ROOM_NAME">roomName</string>
     <string name="PREFERENCES_USERNAME">username</string>
     <string name="PREFERENCES_PASSWORD">password</string>
+    <string name="PREFERENCES_UNSELECTED_ROOMS">unselectedRooms</string>
     <string name="removeUserData">Remove login info</string>
     <string name="lobbyRoomName">Lobby</string>
 </resources>
