--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="exchange_password">Exchange password:</string>
     <string name="fum_username">FUM3 username:</string>
     <string name="fum_password">FUM3 password:</string>
+    <string name="default_fum_username">roomreservator</string>
+    <string name="default_exchange_username">reserve@futurice.com</string>
     <string name="reservationTextTemplate">Reserved: ^1</string>
     <string name="book_now">Book now</string>
     <string name="dateLabelFormat">EEEE d.M.</string>
@@ -34,6 +36,6 @@
     <string name="PREFERENCES_FUM_USERNAME">fumUsername</string>
     <string name="PREFERENCES_FUM_PASSWORD">fumPassword</string>
     <string name="PREFERENCES_UNSELECTED_ROOMS">unselectedRooms</string>
-    <string name="removeUserData">Remove login info</string>
+    <string name="removeUserData">Remove login info and reset settings</string>
     <string name="lobbyRoomName">Lobby</string>
 </resources>
