more visual traffic light functionality (kudos to Sebi for design)

--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -47,4 +47,6 @@
     <string name="allAccountsMagicWord">(All)</string>
     <string name="shown_rooms">Visible rooms</string>
     <string name="reservationCancelInfo">You can cancel reservations that were originally made from a room tablet</string>
+    <string name="touchToReserve">Tap to wake up</string>
+    <string name="freeIn"><![CDATA[ Free in <b>%s</b>]]></string>
 </resources>
