--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="calendarError">Google Calendar error</string>
     <string name="noCalendarsError">No meeting room calendars found. Please ensure that a Google Account has been configured on this device and that Google Calendar has been set to sync the meeting room calendars.</string>
     <string name="close">Close</string>
-    <string name="calendarAccountGlob">futurice.com_*@resource.calendar.google.com</string>
+    <string name="calendarAccountGlob">*@resource.calendar.google.com</string>
     <string name="used_google_account">Used Google Account</string>
     <string name="allAccountsMagicWord">(All)</string>
     <string name="shown_rooms">Visible rooms</string>
