--- a/android/Reservator/res/values/strings.xml
+++ b/android/Reservator/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="disconnectedWarning">Disconnected!</string>
     <string name="aboutInfo">Reservator is made by Futurice, a lean service creation company with offices in Helsinki, Tampere, Berlin and London. More information at: www.futurice.com.\n\nThis application is published under the MIT license. You can find the source code at: http://github.com/futuriceit/meeting-room-tablet</string>
     <string name="aboutTitle">About</string>
+    <string name="loadingText">Loading</string>
 </resources>
