--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,9 @@
     <string name="aboutInfo">Reservator is made by Futurice, a lean service creation company with offices in Helsinki, Tampere, Berlin and London. More information at: www.futurice.com.\n\nThis application is published under the BSD license. You can find the source code at: http://github.com/futurice/meeting-room-tablet</string>
     <string name="aboutTitle">About</string>
     <string name="loadingText">Loading</string>
+    <string name="addressBookOptionLabel">Require address book contacts for reserving</string>
+    <string name="googleAccountType">com.google</string>
+    <string name="selectGoogleAccount">Select Google Account</string>
+    <string name="settingsDefaultAccountForReservation">Select account for reserving</string>
+    <string name="accountForServation">reservationAccount</string>
 </resources>
