--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="selectGoogleAccount">Select Google Account</string>
     <string name="settingsDefaultAccountForReservation">Select account for reserving</string>
     <string name="accountForServation">reservationAccount</string>
+    <string name="addressBookHelpText">If this option is enabled, reserving with the tablet requires entering a valid name that is synced to the accounts address book contacts.</string>
+    <string name="googleAccountHelp">Account or accounts used for searching rooms.</string>
 </resources>
