Use a date format that is friendly on both sides of the pond

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="default_exchange_username">reserve@futurice.com</string>
     <string name="reservationTextTemplate">Reserved: ^1</string>
     <string name="book_now">Book now</string>
-    <string name="dateLabelFormat">EEEE d.M.</string>
+    <string name="dateLabelFormat">EEEE, MMM. d</string>
     <string name="weekLabelFormat">\'Week\' w</string>
     <string name="from">From </string>
     <string name="to">To </string>
