--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="PREFERENCES_FUM_PASSWORD">fumPassword</string>
     <string name="PREFERENCES_UNSELECTED_ROOMS">unselectedRooms</string>
     <string name="PREFERENCES_GOOGLE_ACCOUNT">googleAccount</string>
+    <string name="PREFERENCES_LANGUAGE">language</string>
     <string name="removeUserData">Remove login info and reset settings</string>
     <string name="lobbyRoomName">Lobby</string>
     <string name="calendarError">Google Calendar error</string>
@@ -57,9 +58,15 @@
     <string name="googleAccountType">com.google</string>
     <string name="selectGoogleAccount">Select Google Account</string>
     <string name="settingsDefaultAccountForReservation">Select account for reserving</string>
+    <string name="settingsReset">Removed credentials and reseted settings</string>
+    <string name="settingsSaved">Settings saved</string>
     <string name="accountForServation">reservationAccount</string>
     <string name="addressBookHelpText">If this option is enabled, reserving with the tablet requires entering a valid name that is synced to the accounts address book contacts.</string>
     <string name="googleAccountHelp">Account or accounts used for searching rooms.</string>
     <string name="defaultTitleForReservation">Reserved</string>
     <string name="hintText">Hint: You can use your tablet\'s address book contacts for reserving.</string>
+
+    <string name="language">Language:</string>
+    <string name="language_De">german</string>
+    <string name="language_En">english</string>
 </resources>
