--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -64,4 +64,8 @@
     <string name="googleAccountHelp">Account or accounts used for searching rooms.</string>
     <string name="defaultTitleForReservation">Reserved</string>
     <string name="hintText">Hint: You can use your tablet\'s address book contacts for reserving.</string>
+
+    <string name="language">Language:</string>
+    <string name="language_De">german</string>
+    <string name="language_En">english</string>
 </resources>
