--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="PREFERENCES_GOOGLE_ACCOUNT">googleAccount</string>
     <string name="PREFERENCES_LANGUAGE">language</string>
     <string name="removeUserData">Remove login info and reset settings</string>
-    <string name="settingsDefaultAccountForReservation">Select account for reserving</string>
+    <string name="settings_Default_Account_For_Reservation">Select account for reserving</string>
     <string name="settingsReset">Removed credentials and reseted settings</string>
     <string name="settingsSaved">Settings saved</string>
     <string name="addressBookHelpText">If this option is enabled, reserving with the tabletrequires entering a valid name that is synced to the accounts address book contacts.</string>
@@ -69,6 +69,9 @@
     <string name="used_google_account">Used Google Account</string>
     <string name="allAccountsMagicWord">(All)</string>
     <string name="shown_rooms">Visible rooms</string>
+    <string name="meetingTitleLabel">Meeting designation</string>
+    <string name="meetingTitlePersonName">is person name who reservated</string>
+    <string name="meetingTitleMeetingName">is meeting name</string>
 
     <!--Room-->
     <string name="refreshRoom">refreshing room info</string>
@@ -136,4 +139,8 @@
     <string name="disconnectedWarning">Disconnected!</string>
     <string name="cancleTitle">Cancel reservation?</string>
     
+    <string name="seeRoomTrafficLights">room status</string>
+    <string name="resExaptionErrorCancel">It is not possible to cancle this reservation</string>
+    <string name="saveSettings">save settings</string>
+
 </resources>
