--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -19,7 +19,7 @@
     <string name="default_exchange_username">reserve@futurice.com</string>
     <string name="exchange_server_address">Server-Adresse austauschen</string>
     <string name="calendarError">Fehler: Google Kalender</string>
-    <string name="noCalendarsError">Es wurde kein Meetingraum Kalender gefunden. Bitte stellen Sie sicher, dass ein Google Konto auf diesem Gerät konfiguriert wurde und der Google Kalender eingestellt wurde, um den Meetingraum Kalender zu synchronisieren.</string>
+    <string name="noCalendarsError">Es wurde kein Meetingraum Kalender gefunden. Bitte stell sicher, dass ein Google Konto auf diesem Gerät konfiguriert wurde und der Google Kalender eingestellt wurde, um den Meetingraum Kalender zu synchronisieren.</string>
     <string name="loadingText">lädt</string>
 
     <!--AccountSelection-->
@@ -33,13 +33,12 @@
     <string name="refreshRoomList">Raumliste aktualisieren…</string>
     <string name="setting">Einstellungen</string>
     <string name="aboutTitle">Über</string>
-    <string name="aboutInfo">Reservator wurde von Futurice, einer kleinen Service - Creation Unternehmen mit Büros in Helsinki, Tampere, Berlin and London. Weitere Informationen finden Sie unter: www.futurice.com.\n\nDiese Anwendung wird unter der BSD-Lizenz veröffentlicht. Sie finden den Ursprungs Code unter: http://github.com/futurice/meeting-room-tablet</string>
-    <string name="hintText">Tipp: Sie können die Kontakte aus dem Adressbuch Ihres/Ihrer Tablet/ -s zum reservieren benutzen.</string>
+    <string name="aboutInfo">Reservator wurde von Futurice, einer kleinen Service - Creation Unternehmen mit Büros in Helsinki, Tampere, Berlin and London. Weitere Informationen findst du unter: www.futurice.com.\n\nDiese Anwendung wird unter der BSD-Lizenz veröffentlicht. Du findest den Ursprungs Code unter: http://github.com/futurice/meeting-room-tablet</string>
+    <string name="hintText">Tipp: Du kannst deine Kontakte aus dem Adressbuch deines Tablets zum reservieren benutzen.</string>
     <string name="book_now">Jetzt buchen</string>
-    <string name="faildUser">Bitte versuchen Sie es erneut, denn diesen Benutzer gibt es nicht</string>
-    <string name="faildCheckSettings">Kein Konto für eine Reservierung vorhanden. Bitte prüfen Sie Ihre Einstellungen.</string>
-    <string name="reservation_alternativ_infoLabel">Bitte wählen Sie die Zeit aus, welche Sie
-        verändern wollen.</string>
+    <string name="faildUser">Bitte versuch es erneut, denn diesen Benutzer gibt es nicht</string>
+    <string name="faildCheckSettings">Kein Konto für eine Reservierung vorhanden. Bitte prüf deine Einstellungen.</string>
+    <string name="reservation_alternativ_infoLabel">Bitte wähle die Zeit aus, welche du verändern möchtest.</string>
 
     <!--Settings-->
     <string name="language">Sprache:</string>
@@ -62,7 +61,7 @@
     <string name="googleAccountHelp">Konto oder Konten, welche benutzt werden um Räume zu suchen.</string>
     <string name="addressBookOptionLabel">Reservierung erfordert Kontakte vom Adressbuch </string>
     <string name="continueBtn">weiter</string>
-    <string name="doNotModify">Verändern Sie diese Einstellungen nicht!</string>
+    <string name="doNotModify">Veränder diese Einstellungen nicht!</string>
     <string name="onlyItTeamShouldModify">Nur das IT Team darf diese Einstellungen ändern.</string>
     <string name="goBackBtn">zurück</string>
     <string name="room_name">Name des Standard-Raums</string>
@@ -73,7 +72,7 @@
     <string name="reserv_view_alternativ_label">Ansicht der Reservierungen</string>
     <string name="reserv_view_spinner_default">Reservierungsansicht mit Zeitbalken</string>
     <string name="reserv_view_spinner_change">Reservierungsansicht mit 6 Zeitbuttons</string>
-    <string name="infoText_reservPopup_select">Tipp: Tippen Sie die Zeit an, die Sie ändern wollen</string>
+    <string name="infoText_reservPopup_select">Tipp: Tippe die Zeit an, die du ändern möchtest</string>
     <string name="meetingTitleLabel">Meeting Bezeichnung</string>
     <string name="meetingTitlePersonName">Name der Person, die reserviert hat</string>
     <string name="meetingTitleMeetingName">Name des Meetings</string>
@@ -140,8 +139,8 @@
 
 
     <string name="calendarAccountGlob">*@resource.calendar.google.com</string>
-    <string name="reservationCancelInfo">Sie können Reservierungen löschen, welche ursprünglisch von einem Raum - Tablet erstellt wurde.</string>
     <string name="touchToReserve">Tippen Sie um zu reservieren</string>
+    <string name="reservationCancelInfo">Du kannst Reservierungen löschen, welche ursprünglisch von einem Raum - Tablet erstellt wurde.</string>
     <string name="bookNow">Jetzt buchen</string>
     <string name="disconnectedWarning">Verbindung ist getrennt!</string>
     <string name="cancleTitle">Reservierung abbrechen?</string>
